# MWCsimulation

./: README.md
Multiwire Chamber/: CMakeLists.txt  graph.C  sim.cc
Multiwire Chamber/include/: A01EMPhysics.hh  A01MuonPhysics.hh  construction.hh  detector.hh  generator.hh  physics.hh
Multiwire Chamber/src/: A01EMPhysics.cc  A01MuonPhysics.cc  construction.cc  detector.cc  generator.cc  physics.cc  run.cc
Scintillator/: CMakeLists.txt  sim.cc
Scintillator/include/: OpticalPhysics.hh  construction.hh  detector.hh  physics.hh  run.hh
Scintillator/src/: OpticalPhysics.cc  action.cc  construction.cc  detector.cc  generator.cc  physics.cc  run.cc
